--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,27 @@
+*{
+	font-family: 'Righteous', cursive;
+}
+
 body{
 	height:  100vh;
-	background: url("http://www.pageresource.com/wallpapers/wallpaper/disney-princess-christmas.jpg") no-repeat center;
+	background: url("https://s-media-cache-ak0.pinimg.com/originals/e3/39/41/e33941503646349ea3d379c0d66f8243.jpg") no-repeat center;
 	background-size: cover;
 	text-align: center;
 }
 
 .container{
-	background-color: rgba(255,255,255,0.7);
+	/* background-color: rgba(255,255,255,0.7); */
 	padding: 10px;
 }
 
 h1{
-	color: #339966;
+	color: #284B73;
 	font-size: 40px;
 	margin:  40px 0px 20px; /* top left/right bottom */
 }
 
 #timer-div{
-	background-color: #00ecb9;
+	background-color: none;
 	color: #fff;
 	display: inline-block;
 	font-size: 30px;
@@ -31,7 +35,12 @@ h1{
 .time-unit, .time-unit > span{
 	padding: 10px;
 	border-radius: 3px;
-	background: #00816A;
+	background: #3B9CBC;
 	display: inline-block;
 }
 
+img {
+	border: 10px white double;
+	padding: 10px;
+	margin-top: 20px;
+}
